fix: image align left or right for rtl languages fix: image padding //not sure fix: post top header space

--- a/layout.css
+++ b/layout.css
@@ -157,3 +157,11 @@ h1#title{
   clear: both;
   font-size: 80%;
 }
+
+.alignleft {
+  float: left;
+}
+
+.alignright {
+   float: right;
+}
